--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "subscription",
       "chargebee"
    ],
-   "homepage":"http://github.com/chargebee/chargebee-node",
+   "homepage":"https://github.com/chargebee/chargebee-node",
    "author":"Ajit <ajit@chargebee.com> (https://www.chargebee.com)",
    "main":"lib/chargebee.js",
    "types": "types/index.d.ts",
